[tool.poetry]
name = "labs-webhook-server"
version = "0.1.0"
description = ""
authors = ["aadalal <57609353+AaDalal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
